--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,19 @@ nav a:hover {
 main {
     margin: 0 10%;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+    margin-right: 15px;
+}
+
+a {
+    font-size: 30px;
+    text-decoration: none;
+}
